# py-skelaton

./: policy.json  post_policy.sh
src/: Dockerfile  README.md  build-docker.sh  cluster_scanner.py  deployments.py  docker-compose.yml  k8s_api.py  main.py  policies.py  postgres_utils.py  pyproject.toml  redis_utils.py  test.sh
