[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.11"
psycopg2 = "2.9.9"
pymongo = "4.6.2"
requests = "2.31.0"
pika = "1.3.2"
click="8.1.7"
black="24.2.0"
redis="5.0.3"
Flask="3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
